# BambooLib

./: .gitignore  .travis.yml  BinarySerializer.cpp  BinarySerializer.h  CMakeLists.txt  CoreSystem.cpp  CoreSystem.h  IIdentifyable.cpp  IIdentifyable.h  IIdentifyableTest.cpp  IIdentifyableTest.h  ISerializer.h  IStreamCoder.h  IStreamable.h  KeyValueMap.cpp  KeyValueMap.h  Logger.cpp  main.cpp  ptrtest1  test.log.html  test.txt  test1.txt  test2.txt  test3.txt  test_app.pro
Windows_DLL_Solution/: BambooLib Solution.sln  README.txt
Windows_DLL_Solution/Project1/: Project1.vcxproj  Project1.vcxproj.filters
Windows_DLL_Solution/TestApplication/: PythonTest.cpp  TestApplication.cpp  TestApplication.vcxproj
Windows_DLL_Solution/Windows_DLL_Solution/: Windows_DLL_Solution.vcxproj  Windows_DLL_Solution.vcxproj.filters
include/: BinarySerializer.h  CoreSystem.h  FunctionTraits.h  GeneralDefinitions.h  GraphNode.h  IIdentifyable.h  IPythonAccessable.h  IStreamable.h  Logger.h  ScopeGuard.h  Variant.h  lexical_cast.h  optional.h
src/: CoreSystem.cpp  Logger.cpp
test/: CMakeLists.txt  FunctionTraitsTest.cpp  GraphNodeTest.cpp  LexicalCastTest.cpp  OptionalTest.cpp  README  ScopeGuardTest.cpp  VariantTest.cpp  main.cpp
